# my_linuxServerIntegrations

./: .gitignore  README.md
API/: functions.js  index.js  index.mjs  package-lock.json  package.json
API/logs/: 20230911.txt
API/modules/: functions.mjs
APIs/DB_Handler_API/: index.js  package-lock.json  package.json
APIs/Test_API/: index.mjs  package-lock.json
APIs/modules/: functions.mjs
Applications/Spec_Monitor/: Spec_Monitor.cpp  Spec_Monitor.h
Apps/Applications/: main.cpp
Apps/Applications/Spec_Monitor/: CMakeLists.txt
Documentation/: README.md  myChat - PROJECT.md  p5 - HomeAssistant.md
Documentation/.obsidian/: graph.json  workspace.json
Documentation/NET-GRAPH/: NET-GRAPH.md
Documentation/PLANNING/: Project planning.md
NiceAdmin-pro-bootstrap4Razor/: Readme.txt  charts-apexcharts.html  charts-chartjs.html  charts-echarts.html  components-accordion.html  components-alerts.html  components-badges.html  components-breadcrumbs.html  components-buttons.html  components-cards.html  components-carousel.html  components-list-group.html  components-modal.html  components-pagination.html  components-progress.html  components-spinners.html  components-tabs.html  components-tooltips.html  forms-editors.html  forms-elements.html  forms-layouts.html  forms-validation.html  icons-bootstrap.html  icons-boxicons.html  icons-remix.html  index.html  pages-blank.html  pages-contact.html  pages-error-404.html  pages-faq.html  pages-login.html  pages-register.html  tables-data.html  tables-general.html  users-profile.html
(+97 files in other folders)
